// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils should format index signature type: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Type Alias: LongIndexSignature

> **LongIndexSignature** = \\{\\}

## Index Signature

\\[\`key\`: \`\` \`git·\${string}·\${string} \${string}\` \`\` \\| \`\` \`remote·\${string}·\${string} \${string}\` \`\`\\]: \`\` \`dev git·\${string}·\${string}\` \`\` \\| \`\` \`dev remote·\${string}·\${string}\` \`\` \\| \`\` \`prod git·\${string}·\${string}\` \`\` \\| \`\` \`prod remote·\${string}·\${string}\` \`\`
"
`;

exports[`Utils should format index signature type: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Type Alias: LongIndexSignature

\`\`\`ts
type LongIndexSignature = {};
\`\`\`

## Index Signature

\`\`\`ts
[key:
  | \`git·\${string}·\${string} \${string}\`
  | \`remote·\${string}·\${string} \${string}\`]:
  | \`dev git·\${string}·\${string}\`
  | \`dev remote·\${string}·\${string}\`
  | \`prod git·\${string}·\${string}\`
  | \`prod remote·\${string}·\${string}\`
\`\`\`
"
`;

exports[`Utils should format type with constructor overrides: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: Cache

## Extends

- \`LRUCache\`&lt;\`CacheFetchContext\`, \`CacheFetchContext\`, \`CacheFetchContext\`&gt;

## Constructors

### Constructor

> **new Cache**(): \`Cache\`

#### Returns

\`Cache\`

#### Overrides

\`LRUCache< CacheFetchContext, CacheFetchContext, CacheFetchContext >.constructor\`
"
`;

exports[`Utils should format type with constructor overrides: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: Cache

## Extends

- \`LRUCache\`&lt;\`CacheFetchContext\`, \`CacheFetchContext\`, \`CacheFetchContext\`&gt;

## Constructors

### Constructor

\`\`\`ts
new Cache(): Cache
\`\`\`

#### Returns

\`Cache\`

#### Overrides

\`\`\`ts
LRUCache<
  CacheFetchContext,
  CacheFetchContext,
  CacheFetchContext
>.constructor
\`\`\`
"
`;

exports[`Utils should get class with brackets: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithChars&lt;T&gt;

## Type Parameters

| Type Parameter |
| ------ |
| \`T\` |

## Constructors

### Constructor

> **new ClassWithChars**&lt;\`T\`&gt;(): \`ClassWithChars\`&lt;\`T\`&gt;

#### Returns

\`ClassWithChars\`&lt;\`T\`&gt;

## Properties

### prop

> **prop**: \`T\`
"
`;

exports[`Utils should get class with brackets: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithChars&lt;T&gt;

## Type Parameters

| Type Parameter |
| -------------- |
| \`T\`            |

## Constructors

### Constructor

\`\`\`ts
new ClassWithChars<T>(): ClassWithChars<T>
\`\`\`

#### Returns

\`ClassWithChars\`&lt;\`T\`&gt;

## Properties

### prop

\`\`\`ts
prop: T;
\`\`\`
"
`;

exports[`Utils should get interface with brackets: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithChars&lt;T&gt;

## Type Parameters

| Type Parameter |
| ------ |
| \`T\` |

## Properties

### &lt;

> **&lt;**: \`string\`

***

### &lt;tag&gt;

> **&lt;tag&gt;**: \`string\`

***

### &gt;

> **&gt;**: \`string\`

***

### prop

> **prop**: \`T\`
"
`;

exports[`Utils should get interface with brackets: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithChars&lt;T&gt;

## Type Parameters

| Type Parameter |
| -------------- |
| \`T\`            |

## Properties

### &lt;

\`\`\`ts
<: string;
\`\`\`

---

### &lt;tag&gt;

\`\`\`ts
<tag>: string;
\`\`\`

---

### &gt;

\`\`\`ts
>: string;
\`\`\`

---

### prop

\`\`\`ts
prop: T;
\`\`\`
"
`;

exports[`Utils should get prettified function: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: some\\_prettier\\_function()

> **some\\_prettier\\_function**(\`param\`): \`string\`

\`\`\`ts
reallyUgly    (
javascript
 )
\`\`\`

\`\`\`ts
const originalSingleQuote = 'hello'
const originalDoubleQuote = "hello"
\`\`\`

\`\`\`css
.h1 {     color : red }
\`\`\`

## Parameters

| Parameter | Type |
| ------ | ------ |
| \`param\` | \`string\` |

## Returns

\`string\`
"
`;

exports[`Utils should get prettified function: (Output File Strategy "members") (Option Group "1") 2`] = `
"# Type Alias: SomePrettierTypeAlias

> **SomePrettierTypeAlias** = \`string\` \\| \\{ \`x\`: \`1\`; \\} \\| \`boolean\` \\| \\{ \`y\`: \`2\`; \\}
"
`;

exports[`Utils should get prettified function: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: some_prettier_function()

\`\`\`ts
function some_prettier_function(param): string;
\`\`\`

\`\`\`ts
reallyUgly(javascript);
\`\`\`

\`\`\`ts
const originalSingleQuote = "hello";
const originalDoubleQuote = "hello";
\`\`\`

\`\`\`css
.h1 {
  color: red;
}
\`\`\`

## Parameters

| Parameter | Type     |
| --------- | -------- |
| \`param\`   | \`string\` |

## Returns

\`string\`
"
`;

exports[`Utils should get prettified function: (Output File Strategy "members") (Option Group "2") 2`] = `
"# Type Alias: SomePrettierTypeAlias

\`\`\`ts
type SomePrettierTypeAlias =
  | string
  | {
      x: 1;
    }
  | boolean
  | {
      y: 2;
    };
\`\`\`
"
`;

exports[`Utils should get variable with brackets: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Variable: variableWithChars

> \`const\` **variableWithChars**: \\{ \`<x>\`: \`string\`; \`<y>\`: \`string\`; \`<z>\`: \`string\`; \\}

## Type declaration

### &lt;x&gt;

> **&lt;x&gt;**: \`string\` = \`'>'\`

### &lt;y&gt;

> **&lt;y&gt;**: \`string\` = \`'<'\`

### &lt;z&gt;

> **&lt;z&gt;**: \`string\` = \`'<tag>'\`
"
`;

exports[`Utils should get variable with brackets: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Variable: variableWithChars

\`\`\`ts
const variableWithChars: {
  <x>: string;
  <y>: string;
  <z>: string;
};
\`\`\`

## Type declaration

### &lt;x&gt;

\`\`\`ts
<x>: string = '>';
\`\`\`

### &lt;y&gt;

\`\`\`ts
<y>: string = '<';
\`\`\`

### &lt;z&gt;

\`\`\`ts
<z>: string = '<tag>';
\`\`\`
"
`;
